google closure library

--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -9,17 +9,20 @@
 <body>
 <h1>DOM Clobbering Collection - Micro Benchmarks - Index</h1>
 <section>
-  <h2>mathjax3 Test</h2><ul>
-    <li><a href="mathjax3/poc.html">Test: poc</a></li>
+  <h2>google-client-api Test</h2><ul>
+    <li><a href="google-client-api/poc.html">Test: poc</a></li>
+  </ul>
+  <h2>google-closure-library Test</h2><ul>
+    <li><a href="google-closure-library/poc.html">Test: poc</a></li>
   </ul>
   <h2>mathjax2 Test</h2><ul>
     <li><a href="mathjax2/poc.html">Test: poc</a></li>
   </ul>
+  <h2>mathjax3 Test</h2><ul>
+    <li><a href="mathjax3/poc.html">Test: poc</a></li>
+  </ul>
   <h2>webpack Test</h2><ul>
     <li><a href="webpack/poc.html">Test: poc</a></li>
-  </ul>
-  <h2>google-client-api Test</h2><ul>
-    <li><a href="google-client-api/poc.html">Test: poc</a></li>
   </ul>
 </section>
 </body>
