--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -9,6 +9,9 @@
 <body>
 <h1>DOM Clobbering Collection - Micro Benchmarks - Index</h1>
 <section>
+  <h2>addtoany Test</h2><ul>
+    <li><a href="addtoany/poc.html">Test: poc</a></li>
+  </ul>
   <h2>google-client-api Test</h2><ul>
     <li><a href="google-client-api/poc.html">Test: poc</a></li>
   </ul>
