--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -12,6 +12,9 @@
   <h2>addtoany Test</h2><ul>
     <li><a href="addtoany/poc.html">Test: poc</a></li>
   </ul>
+  <h2>doomcaptcha Test</h2><ul>
+    <li><a href="doomcaptcha/poc.html">Test: poc</a></li>
+  </ul>
   <h2>google-client-api Test</h2><ul>
     <li><a href="google-client-api/poc.html">Test: poc</a></li>
   </ul>
