--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -27,6 +27,12 @@
   <h2>mathjax3 Test</h2><ul>
     <li><a href="mathjax3/poc.html">Test: poc</a></li>
   </ul>
+  <h2>pagefind Test</h2><ul>
+    <li><a href="pagefind/poc.html">Test: poc</a></li>
+  </ul>
+  <h2>steal Test</h2><ul>
+    <li><a href="steal/poc.html">Test: poc</a></li>
+  </ul>
   <h2>webpack Test</h2><ul>
     <li><a href="webpack/poc.html">Test: poc</a></li>
   </ul>
