--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -15,6 +15,9 @@
   <h2>doomcaptcha Test</h2><ul>
     <li><a href="doomcaptcha/poc.html">Test: poc</a></li>
   </ul>
+  <h2>es-module-shims Test</h2><ul>
+    <li><a href="es-module-shims/poc.html">Test: poc</a></li>
+  </ul>
   <h2>google-client-api Test</h2><ul>
     <li><a href="google-client-api/poc.html">Test: poc</a></li>
   </ul>
@@ -29,6 +32,12 @@
   </ul>
   <h2>pagefind Test</h2><ul>
     <li><a href="pagefind/poc.html">Test: poc</a></li>
+  </ul>
+  <h2>polyfills Test</h2><ul>
+    <li><a href="polyfills/poc.html">Test: poc</a></li>
+  </ul>
+  <h2>rspack Test</h2><ul>
+    <li><a href="rspack/poc.html">Test: poc</a></li>
   </ul>
   <h2>steal Test</h2><ul>
     <li><a href="steal/poc.html">Test: poc</a></li>
