--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -42,6 +42,9 @@
   <h2>steal Test</h2><ul>
     <li><a href="steal/poc.html">Test: poc</a></li>
   </ul>
+  <h2>tsup Test</h2><ul>
+    <li><a href="tsup/poc.html">Test: poc</a></li>
+  </ul>
   <h2>webpack Test</h2><ul>
     <li><a href="webpack/poc.html">Test: poc</a></li>
   </ul>
