--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -21,6 +21,9 @@
   <h2>google-closure-library Test</h2><ul>
     <li><a href="google-closure-library/poc.html">Test: poc</a></li>
   </ul>
+  <h2>inspire Test</h2><ul>
+    <li><a href="inspire/poc.html">Test: poc</a></li>
+  </ul>
   <h2>mathjax2 Test</h2><ul>
     <li><a href="mathjax2/poc.html">Test: poc</a></li>
   </ul>
@@ -38,6 +41,9 @@
   </ul>
   <h2>rspack Test</h2><ul>
     <li><a href="rspack/poc.html">Test: poc</a></li>
+  </ul>
+  <h2>stage Test</h2><ul>
+    <li><a href="stage/poc.html">Test: poc</a></li>
   </ul>
   <h2>steal Test</h2><ul>
     <li><a href="steal/poc.html">Test: poc</a></li>
