--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -30,6 +30,9 @@
   <h2>mathjax3 Test</h2><ul>
     <li><a href="mathjax3/poc.html">Test: poc</a></li>
   </ul>
+  <h2>mavo Test</h2><ul>
+    <li><a href="mavo/poc.html">Test: poc</a></li>
+  </ul>
   <h2>pagefind Test</h2><ul>
     <li><a href="pagefind/poc.html">Test: poc</a></li>
   </ul>
