--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -54,6 +54,9 @@
   <h2>tsup Test</h2><ul>
     <li><a href="tsup/poc.html">Test: poc</a></li>
   </ul>
+  <h2>umeditor Test</h2><ul>
+    <li><a href="umeditor/poc.html">Test: poc</a></li>
+  </ul>
   <h2>webpack Test</h2><ul>
     <li><a href="webpack/poc.html">Test: poc</a></li>
   </ul>
