[Gadgets] Add the new gadget from squirt.js

--- a/domc-gadgets-assets/index.html
+++ b/domc-gadgets-assets/index.html
@@ -45,6 +45,9 @@
   <h2>rspack Test</h2><ul>
     <li><a href="rspack/poc.html">Test: poc</a></li>
   </ul>
+  <h2>squirt Test</h2><ul>
+    <li><a href="squirt/poc.html">Test: poc</a></li>
+  </ul>
   <h2>stage Test</h2><ul>
     <li><a href="stage/poc.html">Test: poc</a></li>
   </ul>
@@ -53,9 +56,6 @@
   </ul>
   <h2>tsup Test</h2><ul>
     <li><a href="tsup/poc.html">Test: poc</a></li>
-  </ul>
-  <h2>umeditor Test</h2><ul>
-    <li><a href="umeditor/poc.html">Test: poc</a></li>
   </ul>
   <h2>webpack Test</h2><ul>
     <li><a href="webpack/poc.html">Test: poc</a></li>
