[Gadgets] Update all the gadgets assets to make all of them alertable.

--- a/domc-gadgets-assets/gadgets/index.html
+++ b/domc-gadgets-assets/gadgets/index.html
@@ -9,56 +9,89 @@
 <body>
 <h1>DOM Clobbering Collection - Micro Benchmarks - Index</h1>
 <section>
-  <h2>addtoany Test</h2><ul>
-    <li><a href="addtoany/poc.html">Test: poc</a></li>
+  <h3>addtoany Test</h3><ul>
+    <li><a href="addtoany/poc.html">PoC</a></li>
   </ul>
-  <h2>doomcaptcha Test</h2><ul>
-    <li><a href="doomcaptcha/poc.html">Test: poc</a></li>
+  <h3>astro Test</h3><ul>
+    <li><a href="astro/poc.html">PoC</a></li>
   </ul>
-  <h2>google-client-api Test</h2><ul>
-    <li><a href="google-client-api/poc.html">Test: poc</a></li>
+  <h3>ckplayer Test</h3><ul>
+    <li><a href="ckplayer/poc.html">PoC</a></li>
   </ul>
-  <h2>google-closure-library Test</h2><ul>
-    <li><a href="google-closure-library/poc.html">Test: poc</a></li>
+  <h3>curl Test</h3><ul>
+    <li><a href="curl/poc.html">PoC</a></li>
   </ul>
-  <h2>inspire Test</h2><ul>
-    <li><a href="inspire/poc.html">Test: poc</a></li>
+  <h3>cusdis Test</h3><ul>
+    <li><a href="cusdis/poc.html">PoC</a></li>
   </ul>
-  <h2>mathjax2 Test</h2><ul>
-    <li><a href="mathjax2/poc.html">Test: poc</a></li>
+  <h3>doomcaptcha Test</h3><ul>
+    <li><a href="doomcaptcha/poc.html">PoC</a></li>
   </ul>
-  <h2>mathjax3 Test</h2><ul>
-    <li><a href="mathjax3/poc.html">Test: poc</a></li>
+  <h3>google-client-api Test</h3><ul>
+    <li><a href="google-client-api/poc.html">PoC</a></li>
   </ul>
-  <h2>mavo Test</h2><ul>
-    <li><a href="mavo/poc.html">Test: poc</a></li>
+  <h3>google-closure-library Test</h3><ul>
+    <li><a href="google-closure-library/poc.html">PoC</a></li>
   </ul>
-  <h2>pagefind Test</h2><ul>
-    <li><a href="pagefind/poc.html">Test: poc</a></li>
+  <h3>inspire Test</h3><ul>
+    <li><a href="inspire/poc.html">PoC</a></li>
   </ul>
-  <h2>polyfills Test</h2><ul>
-    <li><a href="polyfills/poc.html">Test: poc</a></li>
+  <h3>layui Test</h3><ul>
+    <li><a href="layui/poc.html">PoC</a></li>
   </ul>
-  <h2>prism Test</h2><ul>
-    <li><a href="prism/poc.html">Test: poc</a></li>
+  <h3>mathjax2 Test</h3><ul>
+    <li><a href="mathjax2/poc.html">PoC</a></li>
   </ul>
-  <h2>rspack Test</h2><ul>
-    <li><a href="rspack/poc.html">Test: poc</a></li>
+  <h3>mathjax3 Test</h3><ul>
+    <li><a href="mathjax3/poc.html">PoC</a></li>
   </ul>
-  <h2>squirt Test</h2><ul>
-    <li><a href="squirt/poc.html">Test: poc</a></li>
+  <h3>mavo Test</h3><ul>
+    <li><a href="mavo/poc.html">PoC</a></li>
   </ul>
-  <h2>stage Test</h2><ul>
-    <li><a href="stage/poc.html">Test: poc</a></li>
+  <h3>pagefind Test</h3><ul>
+    <li><a href="pagefind/poc.html">PoC</a></li>
   </ul>
-  <h2>steal Test</h2><ul>
-    <li><a href="steal/poc.html">Test: poc</a></li>
+  <h3>plausible-analytics Test</h3><ul>
+    <li><a href="plausible-analytics/poc.html">PoC</a></li>
   </ul>
-  <h2>tsup Test</h2><ul>
-    <li><a href="tsup/poc.html">Test: poc</a></li>
+  <h3>plotly Test</h3><ul>
+    <li><a href="plotly/poc.html">PoC</a></li>
   </ul>
-  <h2>webpack Test</h2><ul>
-    <li><a href="webpack/poc.html">Test: poc</a></li>
+  <h3>polyfills Test</h3><ul>
+    <li><a href="polyfills/poc.html">PoC</a></li>
+  </ul>
+  <h3>prism Test</h3><ul>
+    <li><a href="prism/poc.html">PoC</a></li>
+  </ul>
+  <h3>rollup Test</h3><ul>
+    <li><a href="rollup/poc.html">PoC</a></li>
+  </ul>
+  <h3>rspack Test</h3><ul>
+    <li><a href="rspack/poc.html">PoC</a></li>
+  </ul>
+  <h3>seajs Test</h3><ul>
+    <li><a href="seajs/poc.html">PoC</a></li>
+  </ul>
+  <h3>squirt Test</h3><ul>
+    <li><a href="squirt/poc.html?sq-dev">PoC</a></li>
+  </ul>
+  <h3>stage Test</h3><ul>
+    <li><a href="stage/poc.html">PoC</a></li>
+  </ul>
+  <h3>steal Test</h3><ul>
+    <li><a href="steal/poc.html">PoC</a></li>
+  </ul>
+  <h3>tsup Test</h3><ul>
+    <li><a href="tsup/poc.html">PoC</a></li>
+  </ul>
+  <h3>umeditor Test</h3><ul>
+    <li><a href="umeditor/poc.html">PoC</a></li>
+  </ul>
+  <h3>vite Test</h3><ul>
+    <li><a href="vite/poc.html">PoC</a></li>
+  </ul>
+  <h3>webpack Test</h3><ul>
+    <li><a href="webpack/poc.html">PoC</a></li>
   </ul>
 </section>
 </body>
