[Benign] Update the all the gadgets with page that doesn't have payload

--- a/domc-gadgets-assets/gadgets/index.html
+++ b/domc-gadgets-assets/gadgets/index.html
@@ -3,95 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DOM Clobbering Micro Benchmarks</title>
+  <title>DOM Clobbering Collection - Micro Benchmarks - Index</title>
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
 <h1>DOM Clobbering Collection - Micro Benchmarks - Index</h1>
 <section>
   <h3>addtoany Test</h3><ul>
-    <li><a href="addtoany/poc.html">PoC</a></li>
+    <li><a href="addtoany/poc.html">poc</a></li>
   </ul>
   <h3>astro Test</h3><ul>
-    <li><a href="astro/poc.html">PoC</a></li>
+    <li><a href="astro/poc.html">poc</a></li>
   </ul>
   <h3>ckplayer Test</h3><ul>
-    <li><a href="ckplayer/poc.html">PoC</a></li>
+    <li><a href="ckplayer/poc.html">poc</a></li>
   </ul>
   <h3>curl Test</h3><ul>
-    <li><a href="curl/poc.html">PoC</a></li>
+    <li><a href="curl/poc.html">poc</a></li>
   </ul>
   <h3>cusdis Test</h3><ul>
-    <li><a href="cusdis/poc.html">PoC</a></li>
+    <li><a href="cusdis/poc.html">poc</a></li>
   </ul>
   <h3>doomcaptcha Test</h3><ul>
-    <li><a href="doomcaptcha/poc.html">PoC</a></li>
+    <li><a href="doomcaptcha/poc.html">poc</a></li>
   </ul>
   <h3>google-client-api Test</h3><ul>
-    <li><a href="google-client-api/poc.html">PoC</a></li>
+    <li><a href="google-client-api/poc.html">poc</a></li>
   </ul>
   <h3>google-closure-library Test</h3><ul>
-    <li><a href="google-closure-library/poc.html">PoC</a></li>
+    <li><a href="google-closure-library/poc.html">poc</a></li>
   </ul>
   <h3>inspire Test</h3><ul>
-    <li><a href="inspire/poc.html">PoC</a></li>
+    <li><a href="inspire/poc.html">poc</a></li>
   </ul>
   <h3>layui Test</h3><ul>
-    <li><a href="layui/poc.html">PoC</a></li>
+    <li><a href="layui/poc.html">poc</a></li>
   </ul>
   <h3>mathjax2 Test</h3><ul>
-    <li><a href="mathjax2/poc.html">PoC</a></li>
+    <li><a href="mathjax2/poc.html">poc</a></li>
   </ul>
   <h3>mathjax3 Test</h3><ul>
-    <li><a href="mathjax3/poc.html">PoC</a></li>
+    <li><a href="mathjax3/poc.html">poc</a></li>
   </ul>
   <h3>mavo Test</h3><ul>
-    <li><a href="mavo/poc.html">PoC</a></li>
+    <li><a href="mavo/poc.html">poc</a></li>
   </ul>
   <h3>pagefind Test</h3><ul>
-    <li><a href="pagefind/poc.html">PoC</a></li>
+    <li><a href="pagefind/poc.html">poc</a></li>
   </ul>
   <h3>plausible-analytics Test</h3><ul>
-    <li><a href="plausible-analytics/poc.html">PoC</a></li>
+    <li><a href="plausible-analytics/poc.html">poc</a></li>
   </ul>
   <h3>plotly Test</h3><ul>
-    <li><a href="plotly/poc.html">PoC</a></li>
+    <li><a href="plotly/poc.html">poc</a></li>
   </ul>
   <h3>polyfills Test</h3><ul>
-    <li><a href="polyfills/poc.html">PoC</a></li>
+    <li><a href="polyfills/poc.html">poc</a></li>
   </ul>
   <h3>prism Test</h3><ul>
-    <li><a href="prism/poc.html">PoC</a></li>
+    <li><a href="prism/poc.html">poc</a></li>
   </ul>
   <h3>rollup Test</h3><ul>
-    <li><a href="rollup/poc.html">PoC</a></li>
+    <li><a href="rollup/poc.html">poc</a></li>
   </ul>
   <h3>rspack Test</h3><ul>
-    <li><a href="rspack/poc.html">PoC</a></li>
+    <li><a href="rspack/poc.html">poc</a></li>
   </ul>
   <h3>seajs Test</h3><ul>
-    <li><a href="seajs/poc.html">PoC</a></li>
+    <li><a href="seajs/poc.html">poc</a></li>
   </ul>
   <h3>squirt Test</h3><ul>
-    <li><a href="squirt/poc.html?sq-dev">PoC</a></li>
+    <li><a href="squirt/poc.html?sq-dev">poc</a></li>
   </ul>
   <h3>stage Test</h3><ul>
-    <li><a href="stage/poc.html">PoC</a></li>
+    <li><a href="stage/poc.html">poc</a></li>
   </ul>
   <h3>steal Test</h3><ul>
-    <li><a href="steal/poc.html">PoC</a></li>
+    <li><a href="steal/poc.html">poc</a></li>
   </ul>
   <h3>tsup Test</h3><ul>
-    <li><a href="tsup/poc.html">PoC</a></li>
+    <li><a href="tsup/poc.html">poc</a></li>
   </ul>
   <h3>umeditor Test</h3><ul>
-    <li><a href="umeditor/poc.html">PoC</a></li>
+    <li><a href="umeditor/poc.html">poc</a></li>
   </ul>
   <h3>vite Test</h3><ul>
-    <li><a href="vite/poc.html">PoC</a></li>
+    <li><a href="vite/poc.html">poc</a></li>
   </ul>
   <h3>webpack Test</h3><ul>
-    <li><a href="webpack/poc.html">PoC</a></li>
+    <li><a href="webpack/poc.html">poc</a></li>
   </ul>
 </section>
 </body>
